# systeminfo

./: .gitignore  Cargo.toml  Rocket.toml  nohup.out
cert/: unencrypted_key.pem
public/: htop.js  index.css  index.html
src/: main.rs
